Add product digging items definition