@@ -5,36 +5,38 @@ import com.mojang.serialization.codecs.RecordCodecBuilder;
 import dev.teamcitrus.citruslib.codec.CitrusCodecs;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 public record AnimalData(Activity activity, int daysPregnant, int daysToGrowUp,
-        int minChildrenPerBirth, int maxChildrenPerBirth, List<Item> favouriteFoods,
-        Optional<MilkingCodec> milking
+                         int minChildrenPerBirth, int maxChildrenPerBirth, List<Item> favouriteFoods,
+                         List<ItemStack> diggableItems, Optional<MilkingCodec> milking
 ) {
-    //TODO: New field for dig products?
     public static final Codec<AnimalData> CODEC = RecordCodecBuilder.create(func -> func.group(
             Activity.CODEC.fieldOf("activity").forGetter(AnimalData::activity),
             Codec.INT.optionalFieldOf("daysPregnant", 0).forGetter(AnimalData::daysPregnant),
             Codec.INT.optionalFieldOf("daysToGrowUp", 0).forGetter(AnimalData::daysToGrowUp),
             Codec.INT.optionalFieldOf("minChildrenPerBirth", 1).forGetter(AnimalData::minChildrenPerBirth),
             Codec.INT.optionalFieldOf("maxChildrenPerBirth", 1).forGetter(AnimalData::maxChildrenPerBirth),
-            BuiltInRegistries.ITEM.byNameCodec().listOf().optionalFieldOf("favouriteFoods", List.of()).forGetter(AnimalData::favouriteFoods),
+            BuiltInRegistries.ITEM.byNameCodec().listOf().optionalFieldOf("favouriteFoods", Collections.emptyList()).forGetter(AnimalData::favouriteFoods),
+            ItemStack.CODEC.listOf().optionalFieldOf("diggableItems", Collections.emptyList()).forGetter(AnimalData::diggableItems),
             MilkingCodec.CODEC.optionalFieldOf("milking").forGetter(AnimalData::milking)
     ).apply(func, AnimalData::new));
 
     public AnimalData(Activity activity, int daysPregnant, int daysToGrowUp) {
-        this(activity, daysPregnant, daysToGrowUp, 1, 1, List.of(), Optional.empty());
+        this(activity, daysPregnant, daysToGrowUp, 1, 1, Collections.emptyList(), Collections.emptyList(), Optional.empty());
     }
 
-    public AnimalData(Activity activity, int daysPregnant, int daysToGrowUp, int minChildrenPerBirth, int maxChildrenPerBirth) {
-        this(activity, daysPregnant, daysToGrowUp, minChildrenPerBirth, maxChildrenPerBirth, List.of(), Optional.empty());
+    public AnimalData(Activity activity, int daysPregnant, int daysToGrowUp, int minChildrenPerBirth, int maxChildrenPerBirth, List<ItemStack> diggableItems) {
+        this(activity, daysPregnant, daysToGrowUp, minChildrenPerBirth, maxChildrenPerBirth, Collections.emptyList(), diggableItems, Optional.empty());
     }
 
     public AnimalData(Activity activity, int daysPregnant, int daysToGrowUp, MilkingCodec milking) {
-        this(activity, daysPregnant, daysToGrowUp, 1, 1, List.of(), Optional.of(milking));
+        this(activity, daysPregnant, daysToGrowUp, 1, 1, Collections.emptyList(), Collections.emptyList(), Optional.of(milking));
     }
 
     public enum Activity {
